# chess-engine

./: .gitignore  CMakeLists.txt  ChessEngine.sln  README.md  make  results.txt  run.sh  sf_results.txt
Engine/: Engine.vcxproj  Engine.vcxproj.filters  attacks.cpp  attacks.h  bboard.cpp  bboard.h  bitboard.cpp  bitboard.h  consts.h  cpp.hint  defs.h  deque.h  fixed_list.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  random.h  results.txt  score.cpp  score.h  search.cpp  search.h  uci.cpp  uci.h  vector_array.h
Perft_Tests/: Perft_Tests.vcxproj  comp.cpp  main.cpp
Tests/: Tests.cpp  Tests.vcxproj  pch.h
include/: bitboard.h  consts.h  defs.h  endgame.h  eval.h  move.h  movegen.h  perft.h  position.h  random.h  score.h  search.h  search_engine.h  thread.h  tt.h  tune.h  uci.h  zobrist.h
src/: bitboard.cpp  endgame.cpp  main.cpp  movegen.cpp  position.cpp  score.cpp  search.cpp  search_engine.cpp  thread.cpp  tt.cpp  tune.cpp  uci.cpp  zobrist.cpp
tests/: bitboard_tests.cpp  draw_tests.cpp  perft_tests.cpp  position_tests.cpp  test_common.h
tools/: README.md  gradient-tuner.md  pgn_to_dataset.py  tuner.cpp
